<resources>
    <string name="app_name">Conteo Inventario</string>
    <string name="server">SERVIDOR/IP</string>
    <string name="puerto">PUERTO</string>
    <string name="logo_sismantec">Logo_Sismantec</string>
    <string name="titulo_conexion">CONEXIÓN SERVIDOR</string>
    <string name="btn_conectar">CONECTAR</string>
    <string name="ingresar">INGRESAR</string>
    <string name="contrasena">CONTRASENA</string>
    <string name="usuario">USUARIO</string>
    <string name="iniciar_sesion">INICIAR SESIÓN</string>
    <string name="sincronizar_inventario">SINCRONIZAR INVENTARIO</string>
    <string name="nuevo_conteo">NUEVO CONTEO</string>
    <string name="cancelar_proceso">CANCELAR PROCESO</string>
    <string name="reconectar">RECONECTAR</string>
    <string name="proceso_cancelado">PROCESO CANCELADO</string>
    <string name="servidor_conectado">SERVIDOR CONECTADO</string>
    <string name="ejemplo_server">http://207.244.229.215:9095</string>
    <string name="men_principal">MENÚ PRINCIPAL</string>
    <string name="conteo_unidades">CONTEO UNIDADES</string>
    <string name="fecha_conteo">FECHA INICIO: 21/07/2023</string>
    <string name="ubicacion_bodega">UBICACION/BODEGA</string>
    <string name="ubicaci_n_bodega">UBICACIÓN/BODEGA</string>
    <string name="conteo_unidades_y_fracciones">CONTEO UNIDADES Y FRACCIONES</string>
    <string name="iniciar_conteo">INICIAR CONTEO</string>
    <string name="cancelar">CANCELAR</string>
    <string name="explicacion_conteo_unidades">-. ESTE TIPO DE CONTEO SOLO SE REALIZARÁ POR MEDIO DE BÚSQUEDA CON LECTOR DE CÓDIGO DE BARRAS, NO PODRA INGRESAR DE FORMA MANUAL LA EXISTENCIA DEL PRODUCO</string>
    <string name="explicacion_fraccion">-. ESTE TIPO DE CONTEO REALIZAREMOS LA BÚSQUEDA DEL PRODUCTO YA SEA POR CÓDIGO O DESCRIPCIÓN, LUEGO SELECCIONAREMOS EL PRODUCTO E INGRESAREMOS DE FORMA MANUAL LA EXISTENCIA CONTADA EN UNIDADES Y FRACCIONES POR SI EXISTEN.</string>
</resources>