<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_vertical"
    android:background="@drawable/fondo"
    tools:context=".Nuevo_conteo">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_16dp"
        app:cardCornerRadius="@dimen/borderRadius"
        app:cardElevation="@dimen/margin_8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/margin_16dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nuevo_conteo"
                android:textAlignment="center"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvFecha"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_8dp"
                android:text="@string/fecha_conteo" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_16dp"
                android:text="@string/ubicacion_bodega"
                android:textStyle="bold" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/lyUbicacion"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_4dp"
                android:hint="@string/ubicaci_n_bodega"
                app:startIconDrawable="@drawable/ic_bodega">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txtUbicacion"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text|textCapCharacters"
                    android:textColor="@color/colorHint"
                    android:textSize="18sp" />
            </com.google.android.material.textfield.TextInputLayout>
            <Spinner
                android:id="@+id/spBodegas"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <com.google.android.material.switchmaterial.SwitchMaterial
                    android:id="@+id/swConteoUnidades"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginEnd="@dimen/margin_16dp"
                    android:text="@string/conteo_unidades"
                    android:textStyle="bold"/>
                <ImageView
                    android:id="@+id/imgHelp"
                    android:layout_width="70dp"
                    android:layout_height="48dp"
                    android:layout_weight="0.7"
                    android:src="@drawable/help"/>
            </LinearLayout>

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/swConteoFracciones"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="58dp"
                android:text="@string/conteo_unidades_y_fracciones"
                android:textStyle="bold"/>

            <Button
                android:id="@+id/btnIniciar"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                style="@style/Widget.Material3.Button.ElevatedButton"
                android:layout_marginTop="@dimen/margin_4dp"
                android:text="@string/iniciar_conteo"
                android:textSize="20sp"
                android:textStyle="bold"
                app:backgroundTint="@color/colorPrimary"
                android:textColor="@color/white"/>

            <Button
                android:id="@+id/btnCancelar"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                style="@style/Widget.Material3.Button.ElevatedButton"
                android:layout_marginTop="@dimen/margin_4dp"
                android:text="@string/cancelar"
                android:textSize="20sp"
                android:textStyle="bold"
                app:backgroundTint="@color/colorRojo"
                android:textColor="@color/white"/>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>