<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_vertical"
    android:background="@color/background"
    tools:context=".MainActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:layout_margin="@dimen/margin_16dp"
        app:cardCornerRadius="@dimen/borderRadius"
        app:cardElevation="@dimen/margin_8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_margin="@dimen/margin_16dp"
            android:gravity="center">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="90dp"
                android:layout_marginStart="@dimen/margin_logo"
                android:layout_marginEnd="@dimen/margin_logo"
                android:src="@drawable/logo_sismantec2"
                android:contentDescription="@string/logo_sismantec"  />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal|center_vertical"
                android:orientation="horizontal"
                android:layout_marginBottom="@dimen/margin_16dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/titulo_conexion"
                    android:textAlignment="center"
                    android:textSize="24sp"
                    android:textStyle="bold" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/lyIp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:startIconDrawable="@drawable/ic_computer"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:hint="@string/server"
                    android:layout_marginBottom="@dimen/margin_4dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/txtip"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text"
                        android:textSize="18sp"
                        android:focusable="false"
                        android:clickable="false"
                        android:textColor="@color/colorHint"/>
                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/lyPuerto"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:startIconDrawable="@drawable/ic_network"
                    android:hint="@string/puerto"
                    android:layout_marginTop="@dimen/margin_4dp"
                    android:layout_marginBottom="@dimen/margin_4dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/txtpuerto"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text"
                        android:focusable="false"
                        android:clickable="false"
                        android:textColor="@color/colorHint"
                        android:textSize="18sp" />
                </com.google.android.material.textfield.TextInputLayout>

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    style="@style/Widget.Material3.Button.ElevatedButton"
                    android:layout_marginTop="@dimen/margin_4dp"
                    android:text="@string/btn_conectar"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:backgroundTint="@color/colorPrimary"
                    android:textColor="@color/white"/>

            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>