<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo"
    android:orientation="vertical"
    android:gravity="center_vertical"
    tools:context=".Login">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="400dp">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:layout_gravity="center"
            android:layout_margin="@dimen/margin_16dp"
            app:cardCornerRadius="@dimen/borderRadius"
            app:cardElevation="@dimen/margin_8dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/margin_16dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/iniciar_sesion"
                    android:layout_marginTop="@dimen/margin_8dp"
                    android:layout_marginEnd="@dimen/margin_32dp"
                    android:textAlignment="textEnd"
                    android:textSize="24sp"
                    android:textStyle="bold"/>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/lyUsuario"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_24dp"
                    android:layout_marginBottom="@dimen/margin_4dp"
                    app:startIconDrawable="@drawable/ic_user"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:hint="@string/usuario">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/txtUsuario"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text|textCapCharacters"
                        android:textColor="@color/colorHint"
                        android:textSize="18sp" />
                </com.google.android.material.textfield.TextInputLayout>
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/lyPass"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_4dp"
                    android:layout_marginBottom="@dimen/margin_8dp"
                    app:startIconDrawable="@drawable/ic_pass"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:hint="@string/contrasena">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/txtPass"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text|textPassword|textCapCharacters"
                        android:textColor="@color/colorHint"
                        android:textSize="18sp" />
                </com.google.android.material.textfield.TextInputLayout>

                <Button
                    android:id="@+id/btnIngresar"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    style="@style/Widget.Material3.Button.ElevatedButton"
                    android:layout_marginTop="@dimen/margin_4dp"
                    android:text="@string/ingresar"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:backgroundTint="@color/colorPrimary"
                    android:textColor="@color/white"/>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <ImageView
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:src="@drawable/login"
            android:layout_gravity="top|start"
            android:layout_marginStart="@dimen/margin_24dp"
            android:layout_marginTop="-5dp"
            android:elevation="10dp"/>

    </FrameLayout>


</LinearLayout>